# Origin-Protocol

./: .gitignore  README.md
.github/instructions/: codacy.instructions.md
.github/workflows/: python-ci.yml
Origin Main/origin_protocol/: __init__.py  bundle.py  seal.py
Origin Main/platform_tests/: cases.json  run_platform_api_tests.py
Origin Main/tools/: full_node_service.py  node_health_monitor.py  paypal_ipn_listener.py  start_node_stack.ps1
Python/: .coverage  .gitignore  ANALYSIS_SUMMARY.md  BLOCKER_RESOLUTION.md  CHANGELOG.md  DEVELOPER_GUIDE.md  MIGRATION_GUIDE.md  PRODUCTION_READINESS.md  QUICK_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  platform_memo.md  pyproject.toml  requirements.txt
Python/admin_gui/: paypal_admin_app.py
Python/creator_gui/: app.py  ledger_bootstrap.json
Python/docs/: ORIGIN_Canonicalization.md  ORIGIN_Canonicalization_Test_Vectors.md  ORIGIN_Container_Embedding.md  ORIGIN_Error_Codes_v1.md  ORIGIN_License.md  ORIGIN_License_Ledger_Hosting.md  ORIGIN_Node_Registry_Reference.md  ORIGIN_Onboarding_Checklist.md  ORIGIN_PayPal_IPN.md  ORIGIN_Platform_SDK.md  ORIGIN_Public_Telemetry.md  ORIGIN_SLA_Guidelines.md  ORIGIN_Sealed_Bundle_Test_Vectors.md  ORIGIN_Security_Posture.md  ORIGIN_Trust_Governance.md  ORIGIN_Verification_Standard.md  Platform_API_Contract_v1.md  Platform_Integration_Email.md  Platform_Onboarding_Guide.md  Platform_Pricing.md  ZIP_DETERMINISM.md  origin_payload.schema.json  platform_api_v1_openapi.yaml
Python/docs/fixtures/: README.md  canonical_manifest_vector.json  canonical_signature_vector.json  generate_sealed_bundle_vector.py  manifest_example.json  mp4_embedded_base64.txt  payload_example.json  sealed_bundle_vector.json  verify_fixtures.py
Python/platform/: governance_v1.cid  governance_v1.json  platform_bootstrap.json  platform_ledger_api.py
Python/platform/static/: app.js  index.html  style.css
Python/platform_tests/: README.md
Python/platform_tests/fixtures/: revocation_list.json
Python/sdks/go/cmd/: mp4_verifier.go
Python/sdks/go/cmd/mkv_verifier/: main.go
Python/sdks/go/cmd/mp4_verifier/: main.go
Python/sdks/js/: README.md  mkvVerifier.js  sidecarVerifier.js
Python/src/origin_protocol/: attestation.py  bundle.py  cli.py  container.py  embed.py  keys.py  manifest.py  mp4.py  policy.py  reasons.py  registry.py  revocation.py  sdk.py  verify.py
Python/src/origin_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Python/src/origin_protocol/experimental/: __init__.py  coherence_grid.py  state_identity.py  state_identity_sig.py
Python/tests/: test_canonicalization.py  test_coherence_grid.py  test_container_payload.py  test_mkv_embed.py  test_mp4_embed.py  test_origin_protocol.py  test_state_identity.py  test_state_identity_sig.py
Python/tests/eval/: eval_cases.json  eval_cases.yaml  evaluation_report.json  fuzz_report.json  fuzz_verifiers.py  generate_fixtures.py  golden_rejection_codes.json  perf_bench.py  perf_report.json  run_verifier_evaluation.py
Python/tests/eval/fixtures/attestation/: attestation_creator_mismatch.json  attestation_creator_mismatch.sig  attestation_expired.json  attestation_expired.sig  attestation_invalid.sig  attestation_valid.json  attestation_valid.sig  trust_store.json
Python/tests/eval/fixtures/media/: valid_media.mkv
Python/tests/eval/fixtures/mkv/: mkv_with_truncated_tag.mkv  mkv_with_valid_origin_tag.mkv
Python/tests/eval/fixtures/registry/: registry_active.json  registry_empty.json
Python/tests/eval/fixtures/revocation/: revocation_empty.json
Python/tests/eval/fixtures/sidecar/: sidecar_with_tampered_manifest.json  sidecar_with_wrong_public_key.json  valid_sidecar.json
Python/tests/eval/fixtures/tmp/: private_key.ed25519  public_key.ed25519
Python/tests/eval/fixtures/tmp/issuer/: private_key.ed25519  public_key.ed25519
Python/tests/eval/fixtures/tmp/wrong/: private_key.ed25519  public_key.ed25519
Python/tools/: full_node_service.py  node_ledger.py  node_promotion.py  node_registry_service.py  owner_override.py
docs/: ORIGIN_Attestation.md  ORIGIN_Canonicalization.md  ORIGIN_Container_Embedding.md  ORIGIN_Integration_Cookbook.md  ORIGIN_Node_Network.md  ORIGIN_Platform_SDK.md  ORIGIN_Staging_Ledger_Service.md  ORIGIN_Trust_Anchor_Package.md  Platform_Integration_Email.md  Platform_Onboarding_Guide.md  Platform_Policy_Profiles.md
docs/fixtures/: README.md  bundle_example.json  decode_fixtures.py  generate_sealed_bundle_vector.py  generate_signed_vectors.py  mkv_embedded_base64.txt
docs/locales/: en.json
experimental/: README.md
experimental/mobile/: README.md  app.json  package-lock.json  package.json  tsconfig.json
experimental/server/: .env.example  README.md  jest.config.json  package-lock.json  package.json
experimental/social-media/: README.md  index.html  (+2 more)
recovered-originapp-v51/: package.json
(+139 files in other folders)
